fix: fix export area picture annotation data